# Chemproptimus

./: .gitignore  CMakeLists.txt  README.md  manifest.json5  openocd.cfg  project.yml  toolchain-arm-gcc.cmake
asf/: asf.h
asf/sam/drivers/efc/: efc.c
asf/sam/drivers/gmac/: gmac_raw.c  gmac_raw_2.c
asf/sam/utils/linker_scripts/samv71/samv71q21/gcc/: flash.ld
asf/sam/utils/svd/: ATSAMV71Q21B.svd
libcsp/include/csp/: csp_autoconfig.h  csp_types.h
libcsp/src/: csp_crc32.c  csp_debug.c  csp_id.c  csp_io.c  csp_rdp.c  csp_route.c  csp_service_handler.c  csp_services.c  csp_sfp.c
libcsp/src/arch/freertos/: CMakeLists.txt  csp_system.c
libcsp/src/bindings/python/: pycsp.c
libcsp/src/interfaces/: csp_if_can.c  csp_if_eth.c  csp_if_kiss.c  csp_if_udp.c
src/: main.c
src/bss_lib/: comms_status.h  framework_base.h  status.h
src/bss_lib/component_processor/: component_processor.c  component_processor.h
src/bss_lib/console/: console.c  console.h
src/bss_lib/device/: device.c  device.h
src/bss_lib/eeprom/: eeprom.c
src/bss_lib/firing/: firing.c
src/bss_lib/led/: led.c
src/bss_lib/packet_processor/: packet.h  packet_processor.c  packet_processor.h  packet_utilities.c  packet_utilities.h
src/bss_lib/power/: power.c
src/bss_lib/uart-comms/: uart-comms.c  uart-comms.h
src/bss_lib/uart_csp/: uart_csp.c  uart_csp.h
src/bss_lib/watchdog/: watchdog.c
src/config/: FreeRTOSConfig.h  conf_board.h  conf_csp.h  conf_log.h  conf_tasks.h
src/lib/component_processor/: component_processor.h
src/lib/console/: console.c
src/lib/debug/: debug.c  debug.h
src/lib/device/: device.c
src/lib/firing/: firing.c  firing.h
src/lib/hooks/: hooks.c  hooks.h
src/lib/led/: led.h
src/lib/nvm/: nvm.c  nvm.h
src/lib/packet_processor/: packet.h  packet_processor.c
src/lib/power/: power.h
src/lib/uart_csp/: uart_csp.h
src/lib/watchdog/: watchdog.c  watchdog.h
src/rb/: component_handlers.h
src/rb/components/debug/: debug.h  debug_attributes.h
src/rb/components/device/: device.h  device_attributes.h  device_component.h  device_methods.h
src/rb/components/eeprom/: eeprom.h  eeprom_attributes.h  eeprom_methods.h
src/rb/components/firing/: firing.h  firing_attributes.h  firing_methods.h
src/rb/components/nvm/: nvm.h  nvm_attributes.h  nvm_component.h  nvm_methods.h
src/rb/components/power/: power.h  power_attributes.h  power_methods.h
src/rb/components/telemetry/: telemetry.h  telemetry_methods.h
src/rb/instances/debug/: debug_instance.h  debug_instance_init.c
src/rb/instances/device/: device_instance.h  device_instance_init.c
src/rb/instances/eeprom/: eeprom_instance.h  eeprom_instance_init.c
src/rb/instances/firing/: firing_instance.h  firing_instance_init.c
src/rb/instances/nvm/: nvm_instance_init.c
src/rb/instances/power/: power_instance.h  power_instance_init.c
src/rb/instances/telemetry/: telemetry_instance_init.c
src/rb/interfaces/debug/: debug_callbacks.h  debug_interface.c
src/rb/interfaces/device/: device_callbacks.h  device_interface.c  device_interface.h
src/rb/interfaces/eeprom/: eeprom_callbacks.h  eeprom_interface.c  eeprom_interface.h
src/rb/interfaces/firing/: firing_callbacks.h  firing_interface.c  firing_interface.h
src/rb/interfaces/nvm/: nvm_callbacks.h  nvm_interface.c  nvm_interface.h
src/rb/interfaces/power/: power_callbacks.h  power_interface.c  power_interface.h
src/rb/interfaces/telemetry/: telemetry_callbacks.h  telemetry_interface.c
src/rb/nvm/: nvm_cache.c  nvm_cache.h  nvm_struct.h
src/xdu/components/debug/: debug_component.h  debug_methods.h
src/xdu/components/telemetry/: telemetry_attributes.h  telemetry_component.h
src/xdu/instances/nvm/: nvm_instance.h
src/xdu/instances/telemetry/: telemetry_instance.h
src/xdu/interfaces/debug/: debug_interface.c  debug_interface.h
src/xdu/interfaces/device/: device_interface.c
src/xdu/interfaces/nvm/: nvm_callbacks.h
src/xdu/interfaces/telemetry/: telemetry_interface.h
src/xdu/nvm/: nvm_struct.h
unit-test/src/bss_lib/packet_processor/: test_packet_processor.c
